--- a/ffi-utils.cabal
+++ b/ffi-utils.cabal
@@ -17,8 +17,11 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Data.C.Error
+                       Data.C.File.Constant
+                       Data.C.File.IO
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.8 && <4.9
   hs-source-dirs:      src
+
   default-language:    Haskell2010
