--- a/ffi-utils.cabal
+++ b/ffi-utils.cabal
@@ -21,7 +21,7 @@ library
                        Data.C.File.IO
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.8 && <4.9
+  build-depends:       base >=4.8 && <4.9, bytestring
   hs-source-dirs:      src
 
   default-language:    Haskell2010
